feat: add a none scope for places that do not allow pets